Demo [FIX] Z-index fix for the demo banner

--- a/demo/sass/demo.scss
+++ b/demo/sass/demo.scss
@@ -14,6 +14,7 @@ html, body {
 	#banner {
 		background: #FFF;
 		height: $banner-height;
+		z-index: 999;
 	}
 	#toc {
 		margin-top: $banner-height + 1;
@@ -26,7 +27,7 @@ html, body {
 		.header {
 			padding: 0;
 			h4 {
-				padding-bottom: 17px; 
+				padding-bottom: 17px;
 			}
 		}
 	}
@@ -68,7 +69,7 @@ html, body {
 		border-radius: 3px;
 	}
 
-	// Style for default .hljs 
+	// Style for default .hljs
 	// See https://cdnjs.cloudflare.com/ajax/libs/highlight.js/8.9.1/styles/github.min.css
 	// We do not want to directly apply .hljs because they have 'display: block' property and we want inline elements
 	code {
